--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "flowbite": "^2.5.2",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.20"
   }
 }
